--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">home +</button>
                 <div class="dropdown">
-                    <a href="">home style 1</a>
+                    <a href="index.html">home style 1</a>
                     <a href="">home style 2</a>
                 </div>
             </div>
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">explore +</button>
                 <div class="dropdown">
-                    <a href="">explore artworks</a>
+                    <a href="showcase.html">explore artworks</a>
                     <a href="">explore details</a>
-                    <a href="">explore creator</a>
+                    <a href="allCreator.html">explore creator</a>
                     <a href="">creator details</a>
                 </div>
             </div>
